--- a/springboot-helloword/pom.xml
+++ b/springboot-helloword/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>springboot-helloword</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Demo springboot-helloword</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
